# paper-scraper

./: README.md  benjamins_articles.csv  cambridge_articles.csv  paper-scraper.cabal
src/: BenjaminsCSV.hs  CambridgeCSV.hs  Helpers.hs  Main.hs
