cabal-version:  2.0
name:           paper-scraper
version:        0.0.1
synopsis:       fetch info about some papers
build-type:     Simple

executable paper-scraper
    hs-source-dirs: src
    main-is: Main.hs
    build-depends:
        base,
        tagsoup,
        http-client,
        http-client-tls,
        bytestring,
        text,
        text-show,
        colonnade,
        cassava
    default-language: Haskell2010
    other-modules:
        Helpers,
        BenjaminsCSV,
        CambridgeCSV
